--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=task_manage
-spring.datasource.url = ${DB_CONNECT_URL}
+#spring.datasource.url = ${DB_CONNECT_URL}
+spring.datasource.url=jdbc:postgresql://buzf9urwatwnpe4er4b2-postgresql.services.clever-cloud.com:50013/buzf9urwatwnpe4er4b2
+#spring.datasource.username=u92bcdncutsdjdkcqvky
+#spring.datasource.password=kk0YGOAAmNN4uprRf9huTSB9LUSCYO
 spring.datasource.username =${DATABASE_USERNAME}
 spring.datasource.password =${DATABASE_PASSWORD}
 
