--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.url=jdbc:postgresql://buzf9urwatwnpe4er4b2-postgresql.services
 #spring.datasource.password=kk0YGOAAmNN4uprRf9huTSB9LUSCYO
 spring.datasource.username =${DATABASE_USERNAME}
 spring.datasource.password =${DATABASE_PASSWORD}
+spring.datasource.hikari.maximum-pool-size=2
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.max-lifetime=30000
 
 jwt.secret=${JWT_SECRET}
 #spring.security.user.password = test
